samples/_failures_safe/1761513762_023e04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d417d6be.c: In function ‘perform_compression’:
./samples/SAFE/__tmp_d417d6be.c:153:5: error: expected declaration or statement at end of input
  153 |     return result;
      |     ^~~~~~
